Center vertical axis

--- a/style.css
+++ b/style.css
@@ -1,18 +1,34 @@
 html {
     background: url(images/paperBackground.jpg);
-    /* background-size: 100% 100%; */
+    height: 100%;
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    /* align-content: center; */
-    align-items: center;
+    height: 100%;
     font-family: 'Roboto Condensed', sans-serif;
 }
 
 div {
-    /* display: flex; */
+    display: flex;
     margin: 10px;
+}
+
+.container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+}
+
+.buttons {
+    width: 40%;
+    justify-content: space-around;
+    /* flex-grow: 1; */
+}
+
+button {
+    width: 20%;
+    margin: 5px;
 }
